Added a service to handle the images\n Added the service to the Container \n Added code to handle exceptions \n Added the PSR-4 autoload definition to composer so we can use our project classes

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "odiel/test",
     "type": "app",
-    "require-dev": {
+    "autoload": {
+        "psr-4": { "": "src/" }
     },
     "authors": [
         {
